(fix) init flickering

--- a/www/css/ionic.app.custom.addition.css
+++ b/www/css/ionic.app.custom.addition.css
@@ -15,7 +15,8 @@ a:-webkit-any-link{
 }
 
 /*default: white*/
-.pane, .view {
+ion-pane.pane {
+  background: transparent;
 }
 /*************************************
               Layouts 
